+2 in http_tools, +1 in contexts

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,3 @@
-# this file is *not* meant to cover or endorse the use of tox or pytest or
-# testing in general,
-#
-#  It's meant to show the use of:
-#
 #  - check-manifest
 #     confirm items checked into vcs are in your sdist
 #  - python setup.py check 
@@ -13,26 +8,32 @@
 #  and also to help confirm pull requests to this project.
 
 [tox]
-envlist = py{36,37}
+envlist = py3{7,6}
 
 [testenv]
-basepython =
-    py36: python3.6
-    py37: python3.7
+description = {envpython}
 deps =
     check-manifest
-    # If your project uses README.rst, uncomment the following:
-    # readme_renderer
+# If your project uses README.rst, uncomment the following:
+# readme_renderer
     flake8
     pytest
+whitelist_externals = check-manifest
+include_package_data = True
 commands =
+    python --version
+    python -c "import sys; print(sys.executable)"
+    pip list
     check-manifest --ignore tox.ini,tests*
-    # This repository uses a Markdown long_description, so the -r flag to
-    # `setup.py check` is not needed. If your project contains a README.rst,
-    # use `python setup.py check -m -r -s` instead.
+# This repository uses a Markdown long_description, so the -r flag to
+# `setup.py check` is not needed. If your project contains a README.rst,
+# use `python setup.py check -m -r -s` instead.
     python setup.py check -m -s
     flake8 .
     py.test tests
+
 [flake8]
 exclude = .tox,*.egg,build,data
 select = E,W,F
+max-complexity = 10
+ignore = E501
