--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,4 @@
-# Include the README
-include *.md
-
-# Include the license file
-include LICENSE.txt
-
-# Include the data files
-recursive-include data *
+include *.in
+include *.txt
+include tox.ini
+recursive-include tests *.py
