--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Hypothesis
+*.hypothesis
+*.pytest_cache
