--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,8 @@
-# this file is *not* meant to cover or endorse the use of travis, but rather to
-# help confirm pull requests to this project.
-
 language: python
-
-matrix:
-  include:
-    - python: 3.6
-      env: TOXENV=py36
-    - python: 3.7
-      env: TOXENV=py37
-
-install: pip install tox
-
+python:
+  - "3.7"
+  - "3.6"
+dist: xenial
+sudo: true
+install: pip install tox-venv tox-travis
 script: tox
-
-notifications:
-  email: false
