--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 #  - check-manifest
 #     confirm items checked into vcs are in your sdist
-#  - python setup.py check 
+#  - python setup.py check
 #     confirm required package meta-data in setup.py
 #  - readme_renderer (when using a ReStructuredText README)
 #     confirms your long_description will render correctly on PyPI.
@@ -14,14 +14,16 @@ envlist = py3{7,6}
 description = {envpython}
 deps =
     check-manifest
-# If your project uses README.rst, uncomment the following:
-# readme_renderer
     flake8
+    flake8-bugbear
     pytest
+# If your project uses README.rst, uncomment the following:
+#   readme_renderer
 whitelist_externals = check-manifest
 include_package_data = True
+usedevelop = true
 commands =
-    check-manifest --ignore tox.ini,tests*
+    check-manifest --ignore tox.ini,tests*,.idea*
 # This repository uses a Markdown long_description, so the -r flag to
 # `setup.py check` is not needed. If your project contains a README.rst,
 # use `python setup.py check -m -r -s` instead.
@@ -33,4 +35,4 @@ commands =
 exclude = .tox,*.egg,build,data
 select = E,W,F
 max-complexity = 10
-ignore = E501
+ignore = E501, E722
