add pylint to tox env

--- a/tox.ini
+++ b/tox.ini
@@ -12,27 +12,32 @@ envlist = py3{7,6}
 
 [testenv]
 description = {envpython}
+usedevelop = true
+include_package_data = True
+deps = pytest
+commands = pytest tests
+
+[testenv:py37]
 deps =
     check-manifest
     flake8
     flake8-bugbear
-    pytest
+    pylint
 # If your project uses README.rst, uncomment the following:
 #   readme_renderer
-whitelist_externals = check-manifest
-include_package_data = True
-usedevelop = true
 commands =
-    check-manifest --ignore tox.ini,tests*,.idea*
-# This repository uses a Markdown long_description, so the -r flag to
-# `setup.py check` is not needed. If your project contains a README.rst,
-# use `python setup.py check -m -r -s` instead.
     python setup.py check -m -s
     flake8 .
-    py.test tests
+# pylint's "line too long" aka C0301 disabled
+    pylint --disable=C0301 he
+# C0111 = docstrings
+# C0122 = constants should be on the left when writing tests,
+#           because of the `assert expected == actual` format
+    pylint --disable=C0301,C0111,C0122 tests
 
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,.idea,*.egg,build,data
 select = E,W,F
 max-complexity = 10
-ignore = E501, E722
+# E501 = disable "line too long"
+ignore = E501
