remove package and outside data

--- a/tox.ini
+++ b/tox.ini
@@ -19,16 +19,16 @@ commands = pytest tests
 
 [testenv:py37]
 deps =
-    check-manifest
     flake8
     flake8-bugbear
     pylint
+    pytest
 # If your project uses README.rst, uncomment the following:
 #   readme_renderer
 commands =
     python setup.py check -m -s
     flake8 .
-# pylint's "line too long" aka C0301 disabled
+# disable pylint's "line too long" / C0301
     pylint --disable=C0301 he
 # C0111 = docstrings
 # C0122 = constants should be on the left when writing tests,
