add decorator timer(), improve coverage, and other stuff

--- a/tox.ini
+++ b/tox.ini
@@ -13,17 +13,20 @@ envlist = py3{7,6}
 [testenv]
 description = {envpython}
 usedevelop = true
-deps = pytest
-commands = pytest tests
+deps =
+    pytest
+    pytest-cov
+    pytest-xdist
+commands = pytest --cov=he --cov-fail-under=90 -n auto
 
 [testenv:py37]
 deps =
     flake8
     flake8-bugbear
     pylint
-    pytest
 # If your project uses README.rst, uncomment the following:
 #   readme_renderer
+
 commands =
     python setup.py check -m -s
     flake8 .
