--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,22 @@ license_files = LICENSE.txt
 # support. Removing this line (or setting universal to 0) will prevent
 # bdist_wheel from trying to make a universal wheel. For more see:
 # https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
-universal=0
+universal = 0
 
 [tool:pytest]
-addopts = -ra --tb=short
+addopts =
+;    --cov=he
+;    --cov-report term-missing
+;    --cov-report xml
+;    --cov-append
+    --failed-first
+    --exitfirst
 ;log_cli = true
 ;log_cli_level = DEBUG
+testpaths = tests
+nonrecursedirs =
+    fixtures
+    hypothesis
+
+[coverage:run]
+branch = True
