fix bug in configuration

--- a/tox.ini
+++ b/tox.ini
@@ -13,14 +13,12 @@ envlist = py3{7,6}
 [testenv]
 description = {envpython}
 usedevelop = true
+
+[testenv:py37]
 deps =
     pytest
     pytest-cov
     pytest-xdist
-commands = pytest --cov=he --cov-fail-under=90 -n auto
-
-[testenv:py37]
-deps =
     flake8
     flake8-bugbear
     pylint
@@ -29,6 +27,7 @@ deps =
 
 commands =
     python setup.py check -m -s
+    pytest --cov=he --cov-fail-under=90 -n auto
     flake8 .
 # disable pylint's "line too long" / C0301
     pylint --disable=C0301 he
@@ -36,6 +35,13 @@ commands =
 # C0122 = constants should be on the left when writing tests,
 #           because of the `assert expected == actual` format
     pylint --disable=C0301,C0111,C0122 tests
+
+[testenv:py36]
+deps =
+    pytest
+    pytest-cov
+    pytest-xdist
+commands = pytest -n auto
 
 [flake8]
 exclude = .tox,.idea,*.egg,build,data
