--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,12 +7,16 @@ repos:
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: check-ast
+      - id: check-byte-order-marker
       - id: check-json
       - id: check-merge-conflict
       - id: check-xml
       - id: check-yaml
       - id: debug-statements
+      - id: detect-private-key
       - id: end-of-file-fixer
+      - id: fix-encoding-pragma
+        args: [--remove]
       - id: requirements-txt-fixer
       - id: mixed-line-ending
         args: ['--fix=crlf']
