--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ exclude: '^docs/conf.py'
 
 repos:
   - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v1.3.0
+    rev: v2.1.0
     hooks:
       - id: trailing-whitespace
       - id: check-added-large-files
@@ -21,7 +21,7 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=crlf']
   - repo: https://github.com/ambv/black
-    rev: master
+    rev: 18.9b0
     hooks:
       - id: black
         language_version: python3.7
