small config updates & bump version

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ commands =
     pytest --cov=he --cov-fail-under=90 -n auto
     flake8 .
 # disable pylint's "line too long" / C0301
+# W1203 = logging-fstring-interpolation; fstrings are fine for the logging from decorators
     pylint --disable=C0301 he
 # C0111 = docstrings
 # C0122 = constants should be on the left when writing tests,
@@ -44,7 +45,7 @@ deps =
 commands = pytest -n auto
 
 [flake8]
-exclude = .tox,.idea,*.egg,build,data
+exclude = .tox,.idea,*.egg,build,data,dist
 select = E,W,F
 max-complexity = 10
 # E501 = disable "line too long"
