improved coverage settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,10 @@ universal = 0
 
 [tool:pytest]
 addopts =
-;    --cov=he
-;    --cov-report term-missing
-;    --cov-report xml
-;    --cov-append
+    --cov=he
+    --cov-report term-missing
+    --cov-report xml
+    --cov-append
     --failed-first
     --exitfirst
 ;log_cli = true
@@ -28,6 +28,7 @@ nonrecursedirs =
     hypothesis
 
 [coverage:run]
+source = he
 branch = True
 
 [coverage:report]
