--- a/tox.ini
+++ b/tox.ini
@@ -25,14 +25,20 @@ deps =
     pylint
 # If your project uses README.rst, uncomment the following:
 #   readme_renderer
+whitelist_externals =
+    pytest
+    flake8
+    pylint
 
 commands =
     python setup.py check -m -s
-    pytest --cov=he --cov-fail-under=90 -n auto
+    pytest --cov-fail-under=90 -n auto
     flake8 .
 # disable pylint's "line too long" / C0301
 # W1203 = logging-fstring-interpolation; fstrings are fine for the logging from decorators
-    pylint --disable=C0301 he
+# W0511: TODO: ... (fixme)
+# W0703: Catching too general exception BaseException (broad-except)
+    pylint --disable=C0301,W0511,W0703 he
 # C0111 = docstrings
 # C0122 = constants should be on the left when writing tests,
 #           because of the `assert expected == actual` format
@@ -41,7 +47,6 @@ commands =
 [testenv:py36]
 deps =
     pytest
-    pytest-cov
     pytest-xdist
 commands = pytest -n auto
 
