--- a/setup.cfg
+++ b/setup.cfg
@@ -52,3 +52,13 @@ exclude_lines =
 # Don't complain about example-code:
     def enjoy_
 sort = BrPart
+
+[mypy]
+mypy_path = src/
+
+[flake8]
+exclude = .*,*.egg,build,data,dist,trash
+select = E,W,F
+max-complexity = 10
+# E501 = disable "line too long"
+ignore = E501
