--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@
 #  and also to help confirm pull requests to this project.
 
 [tox]
-envlist = py3{7,6}
+envlist = pylint,mypy,py3{7,6}
 skip_missing_interpreters = true
 
 [testenv]
@@ -17,32 +17,50 @@ usedevelop = true
 
 [testenv:py37]
 deps =
+    check-manifest
+    flake8
+    flake8-bugbear
     pytest
     pytest-cov
     pytest-xdist
-    flake8
-    flake8-bugbear
-    pylint
 # If your project uses README.rst, uncomment the following:
 #   readme_renderer
 whitelist_externals =
     pytest
     flake8
-    pylint
+    check-manifest
 
 commands =
     python setup.py check -m -s
+    check-manifest
+    flake8 setup.py src tests
+# TODO: documentation: doc8, pydocstyle
     pytest --cov-fail-under=90 -n auto
-    flake8 .
+
+[testenv:pylint]
+usedevelop = true
+deps = pylint
+whitelist_externals = pylint
+commands =
 # disable pylint's "line too long" / C0301
 # W1203 = logging-fstring-interpolation; fstrings are fine for the logging from decorators
 # W0511: TODO: ... (fixme)
 # W0703: Catching too general exception BaseException (broad-except)
-    pylint --disable=C0301,W0511,W0703 he
+# R0903: Too few public methods (1/2)
+# W0511: TODO, after I learn the `subprocess` library: (fixme)
+    pylint --disable=C0301,W0511,W0703,R0903,W0511 --good-names=e,F,C --score=n he
 # C0111 = docstrings
 # C0122 = constants should be on the left when writing tests,
 #           because of the `assert expected == actual` format
-    pylint --disable=C0301,C0111,C0122 tests
+# C0103: Function name "test_CountCalls" doesn't conform to snake_case naming style (invalid-name)
+    pylint --disable=C0301,C0111,C0122,R0903,C0103,W0511 --score=n tests
+
+[testenv:mypy]
+skip_install = true
+changedir = src
+deps = mypy
+whitelist_externals = mypy
+commands = mypy --strict -p he
 
 [testenv:py36]
 deps =
@@ -50,10 +68,3 @@ deps =
     pytest-cov
     pytest-xdist
 commands = pytest -n auto
-
-[flake8]
-exclude = .tox,.idea,*.egg,build,data,dist
-select = E,W,F
-max-complexity = 10
-# E501 = disable "line too long"
-ignore = E501
