--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@
 #  and also to help confirm pull requests to this project.
 
 [tox]
-envlist = pylint,mypy,py3{7,8}
+envlist = flake8,pylint,mypy,pydocstyle,doc8,py3{7,8}
 skip_missing_interpreters = true
 
 [testenv]
@@ -18,8 +18,6 @@ usedevelop = true
 [testenv:py37]
 deps =
     check-manifest
-    flake8
-    flake8-bugbear
     pytest
     pytest-cov
     pytest-xdist
@@ -27,15 +25,35 @@ deps =
 #   readme_renderer
 whitelist_externals =
     pytest
-    flake8
     check-manifest
 
 commands =
     python setup.py check -m -s
     check-manifest
-    flake8 setup.py src tests
-# TODO: documentation: doc8, pydocstyle
     pytest --cov-fail-under=90 -n auto
+
+[testenv:flake8]
+skip_install = true
+deps =
+    flake8
+    flake8-bugbear
+whitelist_externals = flake8
+commands = flake8 setup.py src tests
+
+[testenv:pydocstyle]
+skip_install = true
+deps = pydocstyle
+whitelist_externals = pydocstyle
+commands = pydocstyle src --explain --add-ignore=D107,D102
+
+[testenv:doc8]
+skip_install = true
+deps = doc8
+whitelist_externals = doc8
+# D001 - lines should not be longer than 79 characters
+# D002- no trailing whitespace
+# D004 - no carriage returns (use unix newlines)
+commands = doc8 --ignore D001,D002,D004 docs
 
 [testenv:pylint]
 usedevelop = true
