attempt to add codecov

--- a/tox.ini
+++ b/tox.ini
@@ -85,4 +85,8 @@ deps =
     pytest
     pytest-cov
     pytest-xdist
-commands = pytest -n auto
+    codecov
+passenv = CI TRAVIS TRAVIS_*
+commands =
+    pytest -n auto
+    codecov
