--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,6 @@ deps =
 whitelist_externals =
     pytest
     check-manifest
-
 commands =
     python setup.py check -m -s
     check-manifest
@@ -49,11 +48,17 @@ commands = pydocstyle src --explain --add-ignore=D107,D102
 [testenv:doc8]
 skip_install = true
 deps = doc8
-whitelist_externals = doc8
+whitelist_externals =
+    doc8
+    make
+changedir = docs
+commands =
+    make linkcheck
 # D001 - lines should not be longer than 79 characters
 # D002- no trailing whitespace
 # D004 - no carriage returns (use unix newlines)
-commands = doc8 --ignore D001,D002,D004 docs
+    doc8 --ignore D001,D002,D004 .
+
 
 [testenv:pylint]
 usedevelop = true
