run all tox testenvs with python 3.7
add dep

try to solve import-error

try

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,11 @@
 envlist = flake8,pylint,mypy,pydocstyle,doc8,py3{7,8}
 skip_missing_interpreters = true
 
+[travis]
+python =
+    3.7: flake8,pylint,mypy,pydocstyle,doc8,py37
+    3.8-dev: py38
+
 [testenv]
 description = {envpython}
 usedevelop = true
@@ -47,7 +52,9 @@ commands = pydocstyle src --explain --add-ignore=D107,D102
 
 [testenv:doc8]
 skip_install = true
-deps = doc8
+deps =
+    sphinx
+    doc8
 whitelist_externals =
     doc8
     make
@@ -62,7 +69,9 @@ commands =
 
 [testenv:pylint]
 usedevelop = true
-deps = pylint
+deps =
+    pylint
+    pytest
 whitelist_externals = pylint
 commands =
 # disable pylint's "line too long" / C0301
